# Group_Chat_Proyecto1_SO

./: README.md  client  client.cpp  server  server.cpp  sistos.pb.cc  sistos.pb.h  sistos.proto
SocketClient/: CMakeLists.txt  client.cpp  main.c
SocketServer/: CMakeLists.txt  main.c
SocketUtil/: CMakeLists.txt  sistos.pb.cc  socketutil.c  socketutil.h
protobuf-3.15.0/: Makefile  config.h  config.status  libtool  protobuf-lite.pc  protobuf.pc
protobuf-3.15.0/benchmarks/: Makefile
protobuf-3.15.0/conformance/: Makefile
protobuf-3.15.0/src/: Makefile  protoc
protobuf-3.15.0/src/.libs/: libprotobuf-lite.lai  libprotobuf.lai  libprotoc.lai  protoc
protobuf-3.15.0/src/google/protobuf/.deps/: any.Plo  any.pb.Plo  any_lite.Plo  api.pb.Plo  arena.Plo  arenastring.Plo  descriptor.Plo  descriptor.pb.Plo  descriptor_database.Plo  duration.pb.Plo  dynamic_message.Plo  empty.pb.Plo  extension_set.Plo  extension_set_heavy.Plo  field_mask.pb.Plo  generated_enum_util.Plo  generated_message_reflection.Plo  generated_message_table_driven.Plo  generated_message_table_driven_lite.Plo  generated_message_util.Plo  implicit_weak_message.Plo  map.Plo  map_field.Plo  message.Plo  message_lite.Plo  parse_context.Plo  reflection_ops.Plo  repeated_field.Plo  service.Plo  source_context.pb.Plo  struct.pb.Plo  text_format.Plo  timestamp.pb.Plo  type.pb.Plo  unknown_field_set.Plo  wire_format.Plo  wire_format_lite.Plo  wrappers.pb.Plo
protobuf-3.15.0/src/google/protobuf/compiler/.deps/: code_generator.Plo  command_line_interface.Plo  importer.Plo  main.Po  parser.Plo  plugin.Plo  plugin.pb.Plo  subprocess.Plo  zip_writer.Plo
protobuf-3.15.0/src/google/protobuf/compiler/cpp/.deps/: cpp_enum.Plo  cpp_enum_field.Plo  cpp_extension.Plo  cpp_field.Plo  cpp_file.Plo  cpp_generator.Plo  cpp_helpers.Plo  cpp_map_field.Plo  cpp_message.Plo  cpp_message_field.Plo  cpp_padding_optimizer.Plo  cpp_primitive_field.Plo  cpp_service.Plo  cpp_string_field.Plo
protobuf-3.15.0/src/google/protobuf/compiler/csharp/.deps/: csharp_doc_comment.Plo  csharp_enum.Plo  csharp_enum_field.Plo  csharp_field_base.Plo  csharp_generator.Plo  csharp_helpers.Plo  csharp_map_field.Plo  csharp_message.Plo  csharp_message_field.Plo  csharp_primitive_field.Plo  csharp_reflection_class.Plo  csharp_repeated_enum_field.Plo  csharp_repeated_message_field.Plo  csharp_repeated_primitive_field.Plo  csharp_source_generator_base.Plo  csharp_wrapper_field.Plo
protobuf-3.15.0/src/google/protobuf/compiler/java/.deps/: java_context.Plo  java_doc_comment.Plo  java_enum.Plo  java_enum_field.Plo  java_enum_field_lite.Plo  java_enum_lite.Plo  java_extension.Plo  java_extension_lite.Plo  java_field.Plo  java_file.Plo  java_generator.Plo  java_generator_factory.Plo  java_helpers.Plo  java_map_field.Plo  java_map_field_lite.Plo  java_message.Plo  java_message_builder.Plo  java_message_builder_lite.Plo  java_message_field.Plo  java_message_field_lite.Plo  java_message_lite.Plo  java_name_resolver.Plo  java_primitive_field.Plo  java_primitive_field_lite.Plo  java_service.Plo  java_shared_code_generator.Plo  java_string_field.Plo  java_string_field_lite.Plo
protobuf-3.15.0/src/google/protobuf/io/.deps/: coded_stream.Plo  gzip_stream.Plo  printer.Plo  strtod.Plo  tokenizer.Plo  zero_copy_stream.Plo  zero_copy_stream_impl.Plo  zero_copy_stream_impl_lite.Plo
protobuf-3.15.0/src/google/protobuf/stubs/.deps/: bytestream.Plo  common.Plo  int128.Plo  status.Plo  statusor.Plo  stringpiece.Plo  stringprintf.Plo  structurally_valid.Plo  strutil.Plo  substitute.Plo  time.Plo
protobuf-3.15.0/src/google/protobuf/util/.deps/: delimited_message_util.Plo  field_comparator.Plo  field_mask_util.Plo  json_util.Plo  message_differencer.Plo  time_util.Plo  type_resolver_util.Plo
(+31 files in other folders)
